--- a/01-01/css/styles.css
+++ b/01-01/css/styles.css
@@ -7,7 +7,7 @@ div.container {
 	margin: 0 auto;
 }
 header {
-	height: 200px;
+	height: 80px;
 	margin-bottom: 20px;
 }
 header .logo {
@@ -21,6 +21,19 @@ header nav {
 	float: right;
 	height: 100%;
 	background-color: #e1e1e1;
+}
+nav ul {
+	list-style: none;
+	margin-top: 30px;
+
+}
+nav ul li {
+	float: left;
+	margin-left: 30px;
+}
+nav ul li a {
+	color: black;
+	text-decoration: none;
 }
 .clear {
 	clear: both;
