--- a/01-02/css/styles.css
+++ b/01-02/css/styles.css
@@ -1,20 +1,26 @@
 body {
 	margin:0;
 	padding:0;
+	font-size: 16px;
 }
 div.container {
 	width: 1000px;
 	margin: 0 auto;
 }
 header {
-	height: 80px;
+	height: 120px;
 	margin-bottom: 20px;
 }
-header .logo {
+header .logoWrap {
+	height: 100%;
 	width: 300px;
 	float: left;
-	height: 100%;
 	background-color: #e1e1e1;
+}
+header .logo {
+	height: 100%;
+	background-image: url(../img/logo.svg);
+	background-position: top left;
 }
 header nav {
 	width: 680px;
@@ -57,7 +63,6 @@ footer {
 	background-color: #e1e1e1;
 	margin-top: 20px;
 }
-
 /* DE AQUI EN ADELANTE ES NUEVO */
 
 @media (max-width: 1024px) and (min-width: 768px) {
