--- a/04-02/css/main.css
+++ b/04-02/css/main.css
@@ -65,13 +65,11 @@ textarea {
    Author's custom styles
    ========================================================================== */
 .contenedor {
-  width: 1100px;
-  margin:0 auto;
+    margin:0 auto;
+    padding: 0 10px;
+    box-sizing: border-box;
 }
 
-.clear {
-  clear: both;
-}
 h2 {
   font-size: 1.6em;
   color:#a00622;
@@ -83,62 +81,116 @@ h3 {
   background-color: #a00622;
   text-align: center;
   padding: 5px 0;
+  -webkit-box-shadow: -0px 3px 0 2px #8F8F8F;
+  box-shadow: -0px 3px 0 2px #8F8F8F;
 }
 h4 {
   font-size: 1.4em;
   color:#a00622;
 }
-.navegacion ul {
+
+img.responsive {
+  width: 100%;
+}
+nav.navegacion ul {
   list-style: none;
   margin:0;
   padding:0;
 }
-.navegacion ul li {
+nav.navegacion ul li {
   float:left;
-  margin-right: 20px;
+  width:100%;
 }
-.navegacion ul li:last-child {
-  margin-right: 0;
-}
-.navegacion ul li a {
+nav.navegacion ul li a {
   font-family: arial,helvetica,sans-serif;
   font-size: 1.4em;
   text-decoration: none;
+  padding: 0 10px;
+  box-sizing: content-box;
 }
 
 header {
   background-color: #a00622;
-  height: 110px;
+  height: auto;
 }
 
 header .logo {
-  width:300px;
   float: left;
-  overflow: hidden;
+  height: 110px;
+  width:100%;
+}
+header .logo .logowrapper{
+  margin: 0 auto;
+  width:300px;
+  height: 100%;
+  background-image: url(../img/logo.svg);
+  background-repeat: no-repeat;
+  background-position: -600px 0px;
+}
+header .logo .logowrapper a {
+  height: 100%;
+  width:100%;
+  display: block;
 }
 header nav {
-  float: right;
-  height: 110px;
-  line-height: 120px;
+  min-height: 110px;
+  height: auto;
 }
-header .navegacion a {
+header nav.navegacion ul li {
+  text-align: center;
+  margin-bottom:20px;
+  margin-top: 20px;
+}
+header nav.navegacion a {
   color: white;
 }
 
 section.slider {
   margin-top: 20px;
 }
-
-
-section.visitar .lugares{
-    width: 350px;
-    float:left;
+section.slider img {
+  width:100%;
 }
 
+section.visitar .lugares{
+    padding: 0 20px;
+    float:left;
+    box-sizing: border-box;
+    width:100%;
+    text-align: center;
+}
+section.visitar .lugares img {
+  width:100%;
+}
+section.galeria {
+  float:left;
+}
+section.galeria img {
+  width:40%;
+  float:left;
+  padding: 5px;
+}
+section.consejos {
+  float:right;
+}
+section.consejos .entrada {
+  float: left;
+  padding: 0 20px 0 0;
+  box-sizing: border-box;
+}
+section.consejos .entrada img {
+  width:100%;
+}
+section.consejos .entrada h4 {
+  margin:0;
+}
 footer {
   margin-top: 30px;
 }
-footer .navegacion a {
+footer nav {
+  display: none;
+}
+footer nav.navegacion a {
   color: #a00622;
 }
 
@@ -154,6 +206,34 @@ footer p {
   padding-top: 15px;
 }
 
+
+
+/** INTERIORES **/
+
+
+.destacada {
+  margin: 30px 0;
+}
+section.contenido {
+  margin-top: 20px;
+}
+
+.informacion section{
+  float:left;
+}
+.informacion aside {
+  float: right;
+  width: 100%;
+  font-size: 2em;
+  color: #666;
+}
+blockquote {
+  background-image: url(../img/svg_comilla.svg);
+  background-repeat: no-repeat;
+  background-position: top left;
+  padding-left: 100px;
+  margin:0;
+}
 
 
 
@@ -272,12 +352,126 @@ textarea[contenteditable] {
    Theses examples override the primary ('mobile first') styles.
    Modify as content requires.
    ========================================================================== */
+@media only screen and (min-width: 500px) {
+    section.visitar .lugares{
+        width: 33%;
+    }
+}
+@media only screen and (min-width: 768px) {
+    .contenedor {
+      width:750px;
+    }
+    header .logo {
+      width:200px;
+    }
+    header .logo .logowrapper{
+      background-position: -360px 0px;
+    }
+    header nav {
+      width: 530px;
+      float:left;
+      line-height: 80px;
+    }
+    header nav.navegacion ul li {
+      float:left;
+      width: auto;
+      margin-bottom: 0;
+    }
 
-@media only screen and (min-width: 800px) {
-    /* Style adjustments for viewports that meet the condition */
+    section.visitar .lugares{
+        width: 33%;
+    }
+    section.galeria {
+      width:100%;
+    }
+    section.galeria img {
+      width: 15%;
+    }
+    section.consejos {
+      width:100%;
+    }
+    section.consejos .entrada {
+      width:100%;
+      margin-bottom: 20px;
+    }
+    section.consejos .entrada img {
+      float: left;
+      width: 200px;
+      margin-right: 20px;
+    }
+
+}
+@media only screen and (min-width: 992px) {
+    .contenedor {
+      width:900px;
+    }
+    header .logo {
+      width:300px;
+    }  
+    header .logo .logowrapper{
+      background-position: 0px 0px;
+    }
+    header nav {
+      width: 580px;
+      float: right;
+      line-height: 120px;
+    }
+    nav.navegacion ul li {
+      float:left;
+      width: auto;
+      padding: 0 10px;
+      margin-top: 0!important;
+    }
+    nav.navegacion ul li a {
+      padding: 0 10px;
+      box-sizing: content-box;
+    }
+    section.galeria {
+       width:33%;
+    }
+    section.galeria img {
+      width:40%!important;
+      margin-right: 0!important;
+    }
+    section.consejos {
+      width:66%;
+    }
+    section.consejos .entrada  {
+      width:50%; 
+      margin-bottom: 0!important;
+    }
+    section.consejos .entrada img {
+      float: none!important;
+      width: 100%!important;
+    }
+    footer nav {
+      display: block!important;
+    }
+
+
+    /** INTERIORES **/
+    .informacion section{
+      width:70%;
+    }
+    .informacion aside {
+      width:30%;
+    }
 }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-       only screen and (min-resolution: 144dpi) {
-    /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 1200px) {
+    .contenedor {
+      width:1100px;
+    }
+     header nav {
+      width: 680px;
+     }
+    nav.navegacion ul li {
+      float:left;
+      width: auto;
+      padding: 0 20px;
+    }
+
 }
+
+
+
