--- a/07-01/css/main.css
+++ b/07-01/css/main.css
@@ -116,7 +116,9 @@ nav.navegacion ul li a {
   font-size: 1.4em;
   text-decoration: none;
   padding: 0 10px;
-  box-sizing: content-box;
+    -webkit-box-sizing: border-box; 
+  -moz-box-sizing: border-box;  
+  box-sizing: border-box;
 }
 
 header {
@@ -290,7 +292,7 @@ form.formulario {
   width:80%;
   margin: 0 auto;
   padding: 20px;
-  box-sizing: content-box;
+  box-sizing: border-box;
   border-radius: 20px;
 }
 form.formulario .campoTexto {
@@ -538,7 +540,7 @@ textarea[contenteditable] {
     }
     nav.navegacion ul li a {
       padding: 0 10px;
-      box-sizing: content-box;
+      box-sizing:border-box;
 
     }
     section.galeria {
